Data source/fluxcd/fluxcd-porto/manifest/staging/namespaces/ingress/web-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.org/proxy-connect-timeout: 3600s
    # nginx.org/proxy-read-timeout: 3600s
    # nginx.org/proxy-send-timeout: 3600s
spec:
  rules:
  - host: dimas.wiryatari.com
    http:
      paths:
      - pathType: Prefix
        path: "/core/web-app"
        backend:
          service:
            name: web-app-service
            port:
              number: 80


---

apiVersion: v1
kind: Service
metadata:
  name: web-app-service
spec:
  type: ExternalName
  externalName: web-app-service.core.svc
